# GPSOpenCl

./: .gitignore  .travis.yml  CITATION.cff  CMakeLists.txt  IPs.txt  README.md  default.ini
.github/workflows/: debug.yml
Kernels/: Acquisition.cl  Tracking.cl
Source/: CMakeLists.txt  Demo.ini  GPSOpenCl.cpp  GPSOpenClAcquisition.cpp  GPSOpenClAcquisition.h  GPSOpenClApplication.cpp  GPSOpenClApplication.h  GPSOpenClChannel.cpp  GPSOpenClChannel.h  GPSOpenClCode.cpp  GPSOpenClCode.h  GPSOpenClCommon.h  GPSOpenClGPUCompute.cpp  GPSOpenClGPUCompute.h  GPSOpenClGPUHandler.cpp  GPSOpenClGPUHandler.h  GPSOpenClSettings.cpp  GPSOpenClSettings.h  GPSOpenClTracking.cpp  GPSOpenClTracking.h  Main.cpp  default.ini
Source/Acquisition/: Acquisition.cpp  Acquisition.h  CMakeLists.txt
Source/Code/: CACode.cpp  CACode.h
Source/IOManagement/: CMakeLists.txt  FileHandler.cpp  FileHandler.h
Source/Logger/: Logger.cpp  Logger.h
Source/Navigation/: Navigation.cpp  Navigation.h
Source/Settings/: CMakeLists.txt  Settings.cpp  Settings.h
Source/Tracking/: CMakeLists.txt  Tracking.cpp  Tracking.h
Source/Utils/: FftUtils.cpp  FftUtils.h  Utils.cpp  Utils.h
Test/: CMakeLists.txt  Main.cpp  SettingsTest.cpp  TestSettings.cpp
Test/Scripts/: plotAcquisitionResults.py  plotLogs.py
Tests/: AcquisitionTest.cpp  CMakeLists.txt  CaCodeTest.cpp  GPUTest.cpp  SettingsTest.cpp  TestUtils.h  TrackingTest.cpp
Tests/Scripts/: inputSignal.txt
Tests/Scripts/Acquisition/: AcquisitionDopplerSignals.txt  AcquisitionMetrics.txt  CorrelationResults.txt  acquisitionTestCaseCreator.m
Tests/Scripts/CACode/: CaCodeTestCase1.txt  CaCodeTestCase2.txt  CaCodeTestCase3.txt  caCodeTestCaseCreator.m
Tests/Scripts/ConfigurationFile/: DefaultConf.ini
Tests/Scripts/GPUTest/: ComplexMultiplierTestCase1Input1.txt  ComplexMultiplierTestCase1Input2.txt  ComplexMultiplierTestCase1Output.txt  ComplexMultiplierTestCase2Input1.txt  ComplexMultiplierTestCase2Input2.txt  ComplexMultiplierTestCase2Output.txt  ComplexMultiplierTestCaseGenerator.m  FFTTestCase1Input.txt  FFTTestCase1Output.txt  FFTTestCase2Input.txt  FFTTestCase2Output.txt  FFTTestCase3Input.txt  FFTTestCase3Output.txt  FFTTestCase4Input.txt  FFTTestCase4Output.txt  FFTTestCaseGenerator.m  IFFTTestCase1Input.txt  IFFTTestCase1Output.txt  IFFTTestCase2Input.txt  IFFTTestCase2Output.txt  IFFTTestCase3Input.txt  IFFTTestCase3Output.txt  IFFTTestCase4Input.txt  IFFTTestCase4Output.txt
Tests/Scripts/Tracking/: ncoMultiplication.txt  trackingTestCaseGenerator.m
